deployments/azure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
